Fixing large gap in about me section

--- a/app/src/AboutMe.css
+++ b/app/src/AboutMe.css
@@ -3,7 +3,7 @@
     color: #FFD4D4;
     padding: 20px;
     width: 100%;
-    
+    margin-top: 0px;
     box-sizing: border-box;
     overflow-x: hidden;
   }
@@ -18,6 +18,8 @@
     z-index: 1;
     background-color: #202020;
     width: 15%;
+    margin-top: 0px;
+    white-space: nowrap;
   }
   
   .image-and-text {
